fdo#38448 No scrolling in mailmerge's create new address list > customize

What changes I made:

1. After the address list is edited, the scroll bar scrolls up.
2. If all entries are deleted from the list, the scroll bar scrolls all the way up and is disabled.
3. When multiple entries are deleted, the scroll bar is not reset to match the entries. Therefore, I reset the scrollbar in this case.

Change-Id: I29f82256ad51fbd55a3f82400ca9d7875539e9ff
Reviewed-on: https://gerrit.libreoffice.org/2454
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>